[gd_scene load_steps=5 format=3 uid="uid://btxcy8lur7wac"]

[ext_resource type="Script" path="res://menus/main_menu.gd" id="1_76e4a"]
[ext_resource type="FontFile" uid="uid://cks3khdvnf0vp" path="res://windows_command_prompt.ttf" id="2_ts8aq"]
[ext_resource type="PackedScene" uid="uid://cg7aiv7jsd6pg" path="res://menus/options_menu.tscn" id="3_nevvc"]

[sub_resource type="Theme" id="Theme_qd0ra"]
default_font = ExtResource("2_ts8aq")

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_76e4a")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_qd0ra")
text = "Begin a new game"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_qd0ra")
text = "Options"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_qd0ra")
text = "Quit to desktop"

[node name="OptionsMenu" parent="." instance=ExtResource("3_nevvc")]
visible = false
layout_mode = 1
